--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
