--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
