--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
