--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.10",
     "zustand": "^5.0.6"
