--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,14 +18,12 @@
       "type": "node",
       "request": "launch",
       "name": "Debug Server",
-      "program": "${workspaceFolder}/server/src/index.ts",
-      "runtimeArgs": ["-r", "tsx/register"],
+      "runtimeExecutable": "npx",
+      "runtimeArgs": ["tsx", "src/index.ts"],
+      "cwd": "${workspaceFolder}/server",
       "env": {
         "NODE_ENV": "development"
-      },
-      "cwd": "${workspaceFolder}/server",
-      "skipFiles": ["<node_internals>/**"],
-      "sourceMaps": true
+      }
     }
   ]
 }
