--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
