--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
+  "prisma": {
+    "seed": "tsx src/seed.ts"
+  },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.12.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
