--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec tsx src/index.ts",
-    "start": "tsc && node dist/index.js",
+    "dev": "nodemon --exec tsx src/server.ts",
+    "start": "tsc && node dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -33,10 +33,14 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
+    "dotenv-cli": "^10.0.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
+    "supertest": "^7.1.4",
     "tsx": "^4.20.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "vitest": "^3.2.4"
   }
 }
