--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mercadopro",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "e2e": "pnpm --filter server e2e:db && pnpm --filter client build && playwright test",
+    "e2e:ui": "pnpm --filter server e2e:db && pnpm --filter client build && playwright test --ui"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.12.4"
+  "devDependencies": {
+    "@playwright/test": "^1.54.2",
+    "concurrently": "^9.2.0",
+    "wait-on": "^8.0.4"
+  }
 }
