--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Generate Prisma client
         working-directory: server
-        run: pnpm prisma generate
+        run: pnpm dotenv -e .env.test -- pnpm prisma generate
 
       - name: Migrate test database
         working-directory: server
