--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,32 +12,27 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1) Node + pnpm cache (speeds up installs)
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
-      # 2) pnpm binary
       - uses: pnpm/action-setup@v4
         with:
           version: 9
 
-      # 3) Install deps
-      - name: Install dependencies
+      - name: Install deps
         run: pnpm install --frozen-lockfile
 
-      # 4) Prisma generate (test env)
       - name: Generate Prisma client
         working-directory: server
         run: pnpm dotenv -e .env.test -- pnpm prisma generate
 
-      # 5) Migrate test DB (test env)
       - name: Migrate test database
         working-directory: server
         run: pnpm dotenv -e .env.test -- pnpm prisma migrate deploy
 
-      # 6) Run backend tests
       - name: Run backend tests
         working-directory: server
         run: pnpm test
