--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "test": "dotenv -e .env.test -- vitest run",
     "test:watch": "dotenv -e .env.test -- vitest",
     "dev": "nodemon --exec tsx src/server.ts",
+    "prebuild": "prisma generate",
     "start": "node dist/server.js",
     "build": "tsc"
   },
