added database seed step in ci/cd workflow

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,10 @@ jobs:
         working-directory: server
         run: pnpm dotenv -e .env.test -- pnpm prisma migrate deploy
 
+      - name: Seed test database
+        working-directory: server
+        run: pnpm dotenv -e .env.test -- pnpm prisma db seed
+
       - name: Run backend tests
         working-directory: server
         run: pnpm test
