--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Seed test database
         working-directory: server
-        run: pnpm dotenv -e .env.test -- pnpm prisma db seed
+        run: pnpm prisma db seed --schema=prisma/schema.prisma
 
       - name: Run backend tests
         working-directory: server
